# Implicit-Grasp-Diffusion

./: LICENSE  README.md  environment.yaml  package.xml  requirements.txt  results  setup.py
scripts/: clean_balance_data.py  construct_dataset_parallel.py  convonet_setup.py  eval_geometry_voxel.py  generate_data_parallel.py  render_rollouts_nvisii.py  save_occ_data_parallel.py  sim_grasp_multiple.py  train.sh  train_giga.py  train_giga_aff.py  train_giga_geo.py  train_igd.py  train_vgn.py
src/igd/: baselines.py  dataset.py  dataset_voxel.py  dataset_voxel_occ.py  detection.py  detection_igd.py  detection_implicit.py  io.py  networks.py  perception.py  simulation.py  vgn_dataset.py  vis.py
src/igd/ConvONets/: common.py  config.py  eval.py
src/igd/ConvONets/conv_onet/: __init__.py  config.py  generation.py  training.py
src/igd/ConvONets/conv_onet/models/: __init__.py  convOccDiff.py  decoder.py  deformable_sampling_attention.py  diffusion.py  diffusion_loss.py  utils.py
src/igd/ConvONets/data/: __init__.py  core.py  fields.py
src/igd/ConvONets/encoder/: __init__.py  pointnet.py  voxels.py
src/igd/ConvONets/utils/: mesh.py  visualize.py  voxels.py
src/igd/ConvONets/utils/libmcubes/: __init__.py  mcubes.cpp
src/igd/ConvONets/utils/libmesh/: inside_mesh.py
src/igd/ConvONets/utils/libsimplify/: simplify_mesh.cpp
src/igd/experiments/: clutter_removal.py  clutter_removal_single.py
src/igd/utils/: btsim.py  implicit.py  misc.py  ros_utils.py  saver.py  visual.py
